--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 if (savedData) data = JSON.parse(savedData);
                 else {
                     data = {
-                        folders: [ { id: `folder-${Date.now()}`, name: 'School Project', tasks: [] }, { id: `folder-${Date.now() + 1}`, name: 'Home Renovation', tasks: [] } ],
+                        folders: [ { id: `folder-${Date.now()}`, name: 'School', tasks: [] }, { id: `folder-${Date.now() + 1}`, name: 'Home', tasks: [] } ],
                         settings: { theme: 'light-mode' }
                     };
                 }
@@ -491,4 +491,5 @@
     </script>
 
 </body>
+
 </html>
